# dishwasher

./: README.md  pyproject.toml
examples/: people.csv
src/dishwasher/: cli.py  fnr.py  inspect.py  io.py  profile.py  standardize.py
tests/: test_fnr.py  test_import.py  test_inspect.py  test_io.py  test_profile.py  test_standardize.py
